<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Layout"
	android:orientation="vertical"
	android:padding="5sp"
	>

	<ListView
		android:id="@+id/rhinoInteractions"
		android:layout_height="wrap_content"
		android:layout_weight="2"
		android:layout_width="fill_parent"
		android:transcriptMode="alwaysScroll"
	/>

	<EditText
		android:hint="@string/enter_javascript"
		android:id="@+id/thePrompt"
		android:inputType="textMultiLine"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>

	<Button
		android:id="@+id/btnSubmit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/submit"
        style="@style/Text"
	/>

	<Button
		android:id="@+id/btnFullScreenEditor"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/full_screen_editor"
        style="@style/Text"
	/>

</LinearLayout>