<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/settings"
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
    />
    <item
        android:icon="@drawable/info"
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="ifRoom"
    />
</menu>