<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	android:padding="3sp"
>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/rhinoInteraction"
	/>

</LinearLayout>